--- a/config/driver.properties
+++ b/config/driver.properties
@@ -1,4 +1,4 @@
 driver = oracle.jdbc.driver.OracleDriver
-url = jdbc:oracle:thin:@localhost:1521:xe
+url = jdbc:oracle:thin:@oracle.team-greedy.com:1521:xe
 user=C##HOMEWORK
 password=HOMEWORK
